*Thu Nov 17 2011 Henri Gavin <.> 0.20100105
- user-manual.html - gnuplot link for Win32 to the 4.2.6 version ... the 4.4.4
version seems to have trouble.    

*Fri Nov 11 2011 Henri Gavin <.> 0.20100105
- user-manual.html - improved installation instructions

*Wed Nov 9 2011 Henri Gavin <.> 0.20100105
- user-manual.html - update suggested text editors and links

*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
- user-manual.html - simplification of installation instructions

*Tue Nov 8 2011 Henri Gavin <.> 0.20100105
- user-manual.html - slight simplification of Windows installation instructions

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- user-manual.html - small wordsmith edits regarding experimental validation of shear correction factors.

*Thu Nov 3 2011 Henri Gavin <.> 0.20100105
- update user-manual.html, add Cowper's 1966 paper to the list of references for shear correction factors

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- wordsmithing in user-manual.html regarding shear effects

*Tue Nov 1 2011 Henri Gavin <.> 0.20100105
- correction to user-manual.html regarding shear correction factor equations 

*Mon Oct 31 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors and torsion
constants

*Sun Oct 30 2011 Henri Gavin <.> 0.20100105
- update user-manual.html regarding shear correction factors

*Sun Mar 27 2011 Henri Gavin <.> 0.20100105
- add .CSV input data template from Simon Fendall

*Mon Mar 7 2011 Henri Gavin <.> 0.20100105
- modify computation of internal forces from interior-span point loads, now the shear force drop due to interior point loads occurs over a span of 2*dx.

*Wed Feb 2 2011 Henri Gavin <.> 0.20100105
-   re-commit after source-forge hack of Jan 28 2011.

*Thu Dec 23 2010 Henri Gavin <.> 0.20100105
- add caveat on maximum shear stress in user manual

*Wed Dec 1 2010 Henri Gavin <.> 0.20100105
- fixed bug related to linear analysis of temperature loads