@@ -140,8 +140,10 @@ via <a href="http://www.gnuplot.info/">Gnuplot</a> version 4.2.
 <li><a href="#sourcecode">Source code</a>
 <li><a href="#exitcodes">Exit code index</a>
 <li><a href="#enhancements">Enhancements projected for future versions</a>
+<li><a href="#acknowledgments">Acknowledgments</a>
 <li><a href="#references">References</a>
 </ol>
+
 
 <a name="starting"><h2>1. Getting started</h2>
 <ol>
@@ -1231,10 +1233,10 @@ of the material perpendicular to the local <i>x</i>-axis.
 <p>
 For slender frame elements shear deformations contribute
 only slightly to the overall structural deformation
-(less than three percent for structures with a span-to-depth ratio greater than 10).
+(less than three percent for elements with a span-to-depth ratio greater than 10).
 For stocky frame elements shear deformations contribute
 significantly to the overall structural deformation 
-(more than seventy percent for structures with a span-to-depth ratio less than 2).
+(more than seventy percent for elements with a span-to-depth ratio less than 2).
 Shear strains in frame elements are distributed in a relatively complicated manner over the cross section and   
 the shear area values, <i>Asy</i> and <i>Asz</i>, account for this non-uniform distributions of shear strain.  
 Shear areas may be thought of as effective cross-sectional areas corresponding to the average shear strain over the cross section, <i>V/(GAx)</i>.   
@@ -2806,7 +2808,18 @@ and possibly
 <li>       ... your recommendations ... send me an e-mail!
 </ul>
 
-<a name="references"/><h2>15. References</h2>
+<a name="acknowledgments"/><h2>15. Acknowledgments</h2>
+
+<p>Frame3DD started as a side-project when the author was a student of
+<a href="http://www.ociv.utfsm.cl/docencia/academicos/hjensen.php">
+Hector Jensen</a> in
+<a href="http://www.engin.umich.edu/bulletin/civil/courses.html#section-4">
+CE 512, Theory of Structures</a>, at
+<a href="http://cee.engin.umich.edu/">The University of Michigan</a>.
+The development of Frame3DD has benefited from many questions, observations, and suggestions from students and other users over a number of years.
+</p>
+
+<a name="references"/><h2>16. References</h2>
 
 <p>This software was developed using methods described in the following texts.
 The two primary sources are the texts by
