@@ -1,3 +1,6 @@
+*Wed Dec 21 2011 Henri Gavin <.> 0.20100105
+- user-manual.html - Add acknowledgment section, small edit to 7.4.2 shear effects.  
+
 *Thu Nov 17 2011 Henri Gavin <.> 0.20100105
 - user-manual.html - gnuplot link for Win32 to the 4.2.6 version ... the 4.4.4
 version seems to have trouble.    
